# cccp

./: .travis.yml  Cargo.toml  Cross.toml  README.md  appveyor.yml  build.rs  scratch.txt
.github/workflows/: rust.yml
ci/: LinuxDockerFile  before_deploy.sh  binary-installer.sh  install.sh  pre_build.sh  script.sh
src/: cipher.rs  error.rs  items.proto  items.rs  main.rs  options.rs
src/install/: mod.rs  target.bat  target.sh
src/receiver/: metadata.rs  mod.rs  writer.rs
src/sender/: mod.rs  reader.rs
