[package]
name = "cccp"
version = "0.11.5"
edition = "2021"
build = "build.rs"
repository = "https://github.com/chanderlud/cccp"
authors = ["Chander Luderman Miller <me@chanchan.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.39", default-features = false, features = ["macros", "fs", "io-util", "signal", "io-std"] }
futures = "0.3"
log = { version = "0.4", features = ["std"] }
async-ssh2-tokio = { git = "https://github.com/chanderlud/async-ssh2-tokio" }
russh = "0.45"
simple-logging = "2.0"
regex = "1.10"
dirs = "5.0"
rpassword = "7.3"
indicatif = "0.17"
prost = "0.13"
bytesize = "1.3"
kanal = "0.1.0-pre8"
blake3 = "1.5"
chacha20 = "0.9"
base64 = "0.22"
ctr = "0.9"
aes = "0.8"
whoami = "1.5"
cipher = "0.4"
rand = "0.8"

octocrab = { version = "0.39", optional = true }
async-compression = { version = "0.4", features = ["futures-io", "gzip"], optional = true }
tar = { version = "0.4", optional = true }
semver = { version = "1.0", optional = true }
http-body-util = { version = "*", optional = true }
russh-sftp = { version = "2.0.3", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
widestring = "1.0"

[build-dependencies]
prost-build = "0.13"

[features]
default = ["installer"]
installer = ["octocrab", "async-compression", "tar", "semver", "russh-sftp", "http-body-util"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.opt-level-1]
inherits = "release"
opt-level = 1

[profile.opt-level-2]
inherits = "release"
opt-level = 2